<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.1">
            <TextView
                android:id="@+id/tv_22_roomname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Raum:"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="0.1"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tv_22_roomname_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="0"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.1">
            <TextView
                android:id="@+id/tv_22_roomstatus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Status:"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="0.1"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tv_22_roomstatus_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="offen/geschlossen"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.1">
            <TextView
                android:id="@+id/tv_22_timeout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Timeout in:"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="0.1"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tv_22_timeout_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="00:00:00"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_22_closeroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/host_room_close"
            android:background="@color/dark_blue"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/btn_22_changetimeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/host_timeout_change"
            android:background="@color/dark_blue"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/btn_22_partiicipantlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/participant"
            android:background="@color/dark_blue"
            android:textSize="18sp"
            />
    </LinearLayout>


</LinearLayout>